# Dynamic3DGaussians

./: .gitignore  README.md  environment.yml  gst_env.env  helpers.py  helpers_scale.py  render_cam_poses_to_mp4.py  train.py  train_scale.py  train_scale_2.py  train_scale_noseg.py  view_in_viser.py  view_in_viser_h264_audio_180_yoga.py  view_in_viser_h264_audio_360_hamit.py  view_in_viser_multiprocessing.py  view_in_viser_threads.py  view_in_viser_threads_multiprocess.py  view_in_viser_threads_multiprocess_180_hamit.py  view_in_viser_threads_multiprocess_360.py  view_in_viser_threads_multiprocess_360_2.py  visualize.py
data_making/: calculate_number_valid_timesteps.py  colmap_commands.txt  colmap_to_data.py  convert.py  convert_nz2ply.py  convert_pose_convention.py  create_cameraInitSfm.py  create_data_from_meshroominfo.py  create_images_txt_colmap.py  database.py  extract_frames.py  extract_frames_folder.py  extract_sample.py  fix_intrinsics.py  fix_intrinsics_and_convert.py  generate_data_for_training.py  generate_data_for_training.sh  generate_data_for_training_2.py  generate_data_for_training_2.sh  generate_data_for_training_v2.sh  generate_masked_data.py  generate_masked_images.sh  generate_masked_images_v2.sh  generate_window_masked_data.py  modify_database_colmap.py  nohup.out  prepare_data.py  read_xml.py  resize.py  resize_pngs.py  sampele.sh  sample.sh  transform_point_cloud.py  undistort_frames.sh  undistort_frames_multi.sh  undistort_frames_multi_v2.sh
encoders/: CMakeLists.txt  encoder.py  gst_h264_endoder_pipeline.cpp  jpeg_encoder.cpp  read_frames_and_h264_encode_gst_pipeline.py  setup_gstreamer_h264_enc.py  setup_jpeg_enc.py
encoders/Gst_h264_endoder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: raw2mp4.py  raw2mp4_parser.py  write_envs2file.py
utils/: utils_colmap.py
